Add markdown section describing multi-chain processing

--- a/01.multi_chain/multi_chain.ipynb
+++ b/01.multi_chain/multi_chain.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 複数chainを用いた処理"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
